# Projet-PPIL-Logiciel-de-dessin

./: README.md
Client1/: CMakeLists.txt  Client1.sln  Client1.vcxproj  Client1.vcxproj.filters  Erreur.cpp  Erreur.h  Formes.txt  main.cpp
Client1/Debug/: Client1.exe.recipe  Client1.ilk  Client1.vcxproj.FileListAbsolute.txt  Formes.txt  vc142.idb
Client1/Debug/Client1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Client1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client1/DessinJava/: DessinJ.cpp  DessinJ.h  Dessiner.h  Socket.cpp  Socket.h
Client1/Forme/: Cercle.cpp  Cercle.h  CmpF2D.h  Forme2D.cpp  Forme2D.h  FormeComp.cpp  FormeComp.h  FormeSimple.cpp  FormeSimple.h
Client1/Parseurs/: ParseurBase.h  ParseurCercle.cpp  ParseurCercle.h  ParseurFormeComp.cpp  ParseurFormeComp.h  ParseurFormes.cpp  ParseurFormes.h  ParseurPoly.cpp  ParseurPoly.h  ParseurSeg.cpp  ParseurSeg.h  ParseurTri.cpp  ParseurTri.h
Client1/Sauvegarde/: ChargeurBdd.cpp  ChargeurBdd.h  ChargeurForme.cpp  ChargeurForme.h  ConnexionBdd.cpp  ConnexionBdd.h  SauveText.cpp  SauveText.h  Sauvegarde.cpp  Sauvegarde.h
Client1/Transformations/: Homoth.cpp  Homoth.h  Rotation.cpp  Rotation.h  Transform.cpp  Transform.h  Transla.cpp  Transla.h
Docu/Client/html/: _cercle_8h.html  _cercle_8h_source.html  _chargeur_bdd_8h_source.html  _chargeur_forme_8h.html  _chargeur_forme_8h_source.html  _cmp_f2_d_8h_source.html  _connexion_bdd_8h.html  _connexion_bdd_8h_source.html  _dessin_j_8h.html  _dessin_j_8h_source.html  _dessiner_8h.html  _dessiner_8h_source.html  _erreur_8h.html  _erreur_8h_source.html  _forme2_d_8h.html  _forme2_d_8h_source.html  _forme_comp_8h.html  _forme_comp_8h_source.html  _forme_simple_8h.html  _forme_simple_8h_source.html  _homoth_8h_source.html  _matrice22_8h_source.html  _parseur_base_8h.html  (+64 more)
(+96 files in other folders)
